// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler 1`] = `
"<!DOCTYPE html>
<html>
  <!-- multi line comment  -->
  <body>
    <h1 class=\\"h1\\" style=\\"color: red\\">
      123456789
      <!-- single line comment  -->
      Hello World!
    </h1>
    <button disabled=\\"true\\" type=\\"submit\\">
      Submit
    </button>
  </body>
</html>"
`;

exports[`tag 1`] = `
"<!DOCTYPE html>
<html>
  <!-- comments  -->
  <body>
    <h1>
      Hello World! - ttttest
    </h1>
    <p>
      xxoo
    </p>
  </body>
</html>"
`;
